# Backchannel

./: DESIGN.md  README.md  pyproject.toml
backchannel/: __init__.py  daemon.py  session.py
systemd/: backchannel@.service
