[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "backchannel"
version = "0.1.0"
description = "Private, sub-millisecond IPC for AI agents — zero open ports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pyzmq>=25"]

[project.scripts]
bc = "backchannel.cli:main"
backchanneld = "backchannel.daemon:main"
